fix search ui z-index bug
fix canvas DPI

tweak jupiter annotations

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -142,6 +142,10 @@ body {
   z-index: 4;
 }
 
+.search-ui {
+  z-index: 5;
+}
+
 @keyframes clickme {
   from {
     opacity: 1;
